# Electrical-

./: .gitignore  README.md  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/app/: lib_validation.py  main.py
backend/app/api/: deps.py  health.py
backend/app/api/v1/: ai.py  auth.py  customers.py  public.py  quotes.py  router.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py
backend/app/domain/quotes/: pricing.py  status_rules.py
backend/app/integrations/: claude_client.py  email_client.py  sms_client.py  storage_client.py  whatsapp_client.py
backend/app/jobs/: quote_expiry.py
backend/app/models/: __init__.py  audit_log.py  customer.py  mixins.py  quote.py  quote_item.py  quote_photo.py  session.py  user.py
backend/app/repositories/: base_repository.py  customer_repository.py  quote_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: ai.py  auth.py  base.py  customer.py  public.py  quote.py  user.py
backend/app/services/: ai_service.py  audit_service.py  auth_service.py  customer_service.py  notification_service.py  pdf_service.py  quote_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_pricing.py  test_status_rules.py  test_validation.py
docs/: 01-PRD.md  02-Technical-Architecture.md
(+69 files in other folders)
